login and signup pages UI fix up
- changed the buttons from img to buttons
- added side image (can change if we dont like)
-fixed layout issues
-TODO add logo/app name

--- a/client/main.scss
+++ b/client/main.scss
@@ -283,3 +283,19 @@ body,html{
     margin-bottom: 2rem;
     margin-right: 2rem;
   }
+
+  .registerButton {
+    height: 3rem;
+    width: 10rem;
+    border-radius: 25px;
+    border: 1px solid #979797;
+    color: #FFF;
+    font-family: Arial;
+    font-size: 18px;
+    letter-spacing: 1.41px;
+    line-height: 22px;
+    text-align: center;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
+    color: #333;
+  }
